tests/integration/snapshots/integration__commands__format__uglify_PRETTIER_SINGLE_LINE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}

stdout ---
{"key1":[true,false,null],"key2":{"key3":[1,2,"3",1e10,1e-3]}}

stderr ---
