tests/integration/snapshots/integration__commands__format__uglify_STANDALONE_STRING.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
"string"
stdout ---
"string"

stderr ---
