tests/integration/snapshots/integration__commands__format__uglify_STRING_ALL_BASIC_ESCAPES.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
"\"\\\/\n\r\t\b\f"
stdout ---
"\"\\\/\n\r\t\b\f"

stderr ---
