tests/integration/snapshots/integration__commands__format__uglify_STRING_FORM_FEED_ESCAPE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
"\f"
stdout ---
"\f"

stderr ---
