tests/integration/snapshots/integration__commands__format__uglify_STRING_MIXED_CASE_HEX_UNICODE.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
"\u0123\u4567\u89AB\uCDEF\uabcd\uef4A"
stdout ---
"\u0123\u4567\u89AB\uCDEF\uabcd\uef4A"

stderr ---
